# jyogi-oauth

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.github/ISSUE_TEMPLATE/: feature_request.md
auth-server/: Dockerfile  go.mod  go.sum
auth-server/cmd/seed/: main.go
auth-server/cmd/server/: main.go
auth-server/internal/config/: config.go
auth-server/internal/handler/: admin_audit_handler.go  admin_client_handler.go  admin_member_handler.go  admin_scope_handler.go  authorize_handler.go  consent_handler.go  discovery_handler.go  identity_claims.go  me_handler.go  (+12 more)
config/: .env.dev  .env.prod.example
docs/: api-auth-server.html  api-auth-server.md  api-resource-server.html  api-resource-server.md  architecture.html  architecture.md  db-postgresql.html  db-postgresql.md  db-redis.html  db-redis.md  env-variables.html  env-variables.md  index.html  jwt-claims.html  jwt-claims.md  security.html  security.md  style.css
docs/guide/: index.html  quickstart.html  scopes.html
docs/internal/: api-auth-server.html  api-resource-server.html  architecture.html  db-postgresql.html  db-redis.html  env-variables.html  index.html  jwt-claims.html  security.html
migrations/: 001_init.sql
nginx/: default.conf  prod.conf
resource-server/: Cargo.toml  Dockerfile
resource-server/src/: auth.rs  config.rs  jwt.rs  main.rs
resource-server/src/db/: identity.rs  mod.rs
resource-server/src/handler/: health.rs  identity.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.vue  api.ts  style.css  types.ts
(+37 files in other folders)
