[package]
name = "resource-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
env_logger = "0.11"
log = "0.4"
regex-lite = "0.1"
